--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+>
     <title>Githubioweb</title>
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
+    <nav>
+        <ul>
+          <li><strong>Acme Corp</strong></li>
+        </ul>
+        <ul>
+          <li><a href="#" class="Button">Services</a></li>
+          <li><a href="#" class="Button">Products</a></li>
+        </ul>
+      </nav>
+ <main class="container">
+    <article>
+        <header>Header</header>
+        <img class="container" src="https://picsum.photos/id/1/200/300" alt="">
+        <footer>Footer</footer>
+      </article>
+ </main>
 </body>
 </html>
