--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <img class="container" src="https://picsum.photos/id/1/2200/2300" alt="">
         <footer>Footer</footer>
       </article>
+      <article>
+        <header>2.baslik</header>
+        <img class="container" src="https://picsum.photos/id/25/2200/2300" alt="">
+        <footer>Footer</footer>
+      </article>
  </main>
 </body>
 </html>
