--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+  <html data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +11,10 @@
     <title>Githubioweb</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
+ 
     <nav>
         <ul>
-          <li><strong>Acme Corp</strong></li>
+          <li><strong>Githubioweb</strong></li>
         </ul>
         <ul>
           <li><a href="#" class="Button">Services</a></li>
@@ -21,8 +22,10 @@
         </ul>
       </nav>
  <main class="container">
+     
     <article>
-        <header>Header</header>
+       
+        <a  target="_blank" href="https://healmedy.com/"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</a>
         <img class="container" src="https://picsum.photos/id/1/2200/2300" alt="">
         <footer>Footer</footer>
       </article>
